--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -2,19 +2,16 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".onsale.OnSaleActivity">
+    tools:context=".navigation_drawer.BaseActivity">
 
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/on_sale_main_content">
-
-        </include>
     </FrameLayout>
 
     <android.support.design.widget.NavigationView
@@ -23,6 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_gravity="start"
         app:headerLayout="@layout/header"
-        app:menu="@menu/drawer"
-        />
+        app:menu="@menu/drawer" />
 </android.support.v4.widget.DrawerLayout>
+
+
+
+
