Add search wiget

--- a/app/src/main/res/layout/on_sale_main_content.xml
+++ b/app/src/main/res/layout/on_sale_main_content.xml
@@ -19,7 +19,7 @@
             android:minHeight="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:titleTextColor="@android:color/white">
+            app:theme="@style/AppTheme.AppBarOverlay">
         </android.support.v7.widget.Toolbar>
     </RelativeLayout>
 
