--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -37,8 +37,8 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/circle_image_view_category_in_product_detail"
-                    android:layout_width="37.5dp"
-                    android:layout_height="37.5dp"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="12.5dp"
@@ -53,7 +53,7 @@
                     android:layout_marginBottom="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginLeft="10dp"
-                    android:textSize="15sp"/>
+                    android:textSize="17sp"/>
 
             </RelativeLayout>
 
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/text_view_product_name_in_product_detail"
-                android:textSize="13sp"
+                android:textSize="23sp"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="17dp"/>
 
@@ -77,10 +77,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="58.5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <ImageView
-                    android:layout_width="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/image_view_like"
                     android:paddingLeft="40dp"
@@ -88,10 +89,11 @@
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:background="@drawable/border"
-                    android:src="@drawable/ic_like"/>
+                    android:src="@drawable/ic_like"
+                    android:layout_weight="1" />
 
                 <ImageView
-                    android:layout_width="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/image_view_comment"
                     android:paddingLeft="40dp"
@@ -99,10 +101,11 @@
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:background="@drawable/border"
-                    android:src="@drawable/ic_comment"/>
+                    android:src="@drawable/ic_comment"
+                    android:layout_weight="1" />
 
                 <ImageView
-                    android:layout_width="120dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/image_view_more"
                     android:paddingLeft="40dp"
@@ -110,7 +113,8 @@
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:background="@drawable/border"
-                    android:src="@drawable/ic_more"/>
+                    android:src="@drawable/ic_more"
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
@@ -118,7 +122,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/text_view_description_in_product_detail"
-                android:layout_marginTop="26dp"/>
+                android:layout_marginTop="26dp" />
+
+            <android.support.v4.view.ViewPager
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/view_pager_related_products"
+                android:layout_width="match_parent"
+                android:layout_height="332dp"
+                android:layout_centerHorizontal="true">
+            </android.support.v4.view.ViewPager>
 
         </LinearLayout>
 
