--- a/app/src/main/res/layout/explore_toolbar.xml
+++ b/app/src/main/res/layout/explore_toolbar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:id="@+id/toolbar"
+    android:id="@+id/tool_bar"
     android:background="@color/colorPrimary"
     app:layout_scrollFlags="scroll|enterAlways"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
