--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -10,8 +10,7 @@
         android:id="@+id/image_in_view_pager"
         android:layout_width="match_parent"
         android:contentDescription="@string/app_name"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"/>
+        android:layout_height="332dp" />
 
     <TextView
         android:layout_width="wrap_content"
